@@ -1,3 +1,5 @@
+ 2003-07-23 Al Riddoch <alriddoch@zepler.org>
+    - skstream/skstream.h: Fix header for windows build.
  2003-07-23 James Turner <james@worldforge.org>
     - Comitting long-standing ProjectBuilder file updates, 
       builds a nice skstream.framework under OS-X. Can also
